Fix wrapping of long texts in trips list.

--- a/webapp/src/app/my-trips/my-trips.component.scss
+++ b/webapp/src/app/my-trips/my-trips.component.scss
@@ -1,3 +1,4 @@
 .comment-column {
+  white-space: nowrap;
   text-overflow: ellipsis;
 }
